# ScarfaceEX

./: CMakeLists.txt  LICENSE  README.md  ScarfaceEX.cpp  ScarfaceEX_Combat_Tutorial_Objective_10_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_11_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_12_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_13_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_14_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_15_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_16_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_18_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_2_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_3_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_4_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_5_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_6_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_7_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_8_Script.txt  ScarfaceEX_Combat_Tutorial_Objective_9_Script.txt  ScarfaceEX_Combat_Tutorial_Objectives_1_To_17_Script.txt  ScarfaceEX_Cop_Bribe_Script.txt  ScarfaceEX_Gang_Bribe_Script.txt  ScarfaceEX_MNIS_S01_4_Cops_Are_Here_Cutscene_Trigger_Valid_Script.txt  ScarfaceEX_Main_Character_Switching_Done_Script.txt  ScarfaceEX_Main_Character_Switching_To_Valid_Package_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Island_Package_0_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Island_Package_1_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Island_Package_2_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Island_Package_3_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Island_Package_4_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Island_Package_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Main_Character_Death_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Main_Character_Switching_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Miami_Package_0_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Miami_Package_1_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Miami_Package_2_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Miami_Package_3_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Miami_Package_4_Script.txt  ScarfaceEX_Narrator_Quotes_Triggered_For_Miami_Package_5_Script.txt  (+3 more)
ScarfaceHook Edition/: ScarfaceEX.cpp
